2008-04-12  Aaron Hawley  <aaronh@localhost.localdomain>

	* php-mode.el (php-tags, php-tags-key): Move definition to above
	php-mode to avoid byte compiler warning.  Use eval-when-compile
	for regexp-opt.
	(php-font-lock-keywords-1): Use font-lock-preprocessor-face for
	PHP and ASP tags.

2008-04-09  Aaron S. Hawley  <ashawley-@-sourceforge.net>

	* php-mode.el (php-mode): Add commented-out c-lang-defvar
	statements below commented-out out c-lang-defconst.
	(php-mode-modified): Resolve setting constant by using
	format-time-string, but still using eval-when-compile.
	(php-mode): Turn on c-mode features with c-add-language, including
	c-symbol-key.
	(php-mode): Overwrite C-style macros rule to recognize PHP tags
	instead.
	(php-tags, php-tags-key): New constants.
	(php-font-lock-keywords-1): Use php-tags-key for syntax
	highlighting of PHP tags.

2008-04-07  Aaron S. Hawley  <ashawley-@-sourceforge.net>

	* php-mode.el (php-beginning-of-defun-regexp): Support function
	keywords like public, private per #1892662.

2008-04-06  Aaron S. Hawley  <ashawley-@-sourceforge.net>

	* php-mode.el (php-show-arglist, php-font-lock-keywords-1)
	(php-font-lock-keywords-2): Replace "\\s-" for "[ \t]" in regular
	expressions to maintain consistency.
	(php-imenu-generic-expression): Delete comment explaining Imenu,
	since it's documented *correctly* in the manual.
	(php-mode): Remove definition php-mode-syntax-table
	and XEmacs bits that likely don't even work.

	* php-mode.el: Change incorrect year, "2007", in "Modified" field
	at top of file.
	(php-mode-version-number): Mark as "alpha" release.

2008-01-25  Aaron S. Hawley  <ashawley-@-sourceforge.net>

	* Makefile: File added.

2008-01-03  Aaron S. Hawley  <ashawley-@-sourceforge.net>

	* php-mode.el: Release candidate for 1.4.0.  Update copyright.
	Update version number.

2008-01-02  Aaron S. Hawley  <ashawley-@-sourceforge.net>

	* php-mode.el (php-mode-modified): Fix this constant when library