@@ -5,6 +5,8 @@
 	for regexp-opt.
 	(php-font-lock-keywords-1): Use font-lock-preprocessor-face for
 	PHP and ASP tags.
+	(php-mode-modified): Use a string literal rather than a computed
+	value.
 
 2008-04-09  Aaron S. Hawley  <ashawley-@-sourceforge.net>
 
